--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
         "server": "ts-node-dev --respawn --transpile-only src/server.ts",
         "build": "tsc -p .",
         "start": "node dist/server.js",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage",
         "prisma": "prisma",
         "prisma:generate": "prisma generate",
         "prisma:migrate": "prisma migrate dev --name init",
@@ -13,22 +16,24 @@
     },
     "dependencies": {
         "@fastify/cookie": "^11.0.2",
-        "@fastify/cors": "^11.1.0",
+        "@fastify/cors": "^11.2.0",
         "@fastify/helmet": "^13.0.2",
-        "@prisma/client": "^6.16.3",
+        "@prisma/client": "^6.19.2",
         "bcryptjs": "^2.4.3",
-        "jsonwebtoken": "^9.0.2",
-        "fastify": "^5.6.1",
-        "ioredis": "^5.4.1",
-        "zod": "^4.1.11"
+        "jsonwebtoken": "^9.0.3",
+        "fastify": "^5.7.1",
+        "ioredis": "^5.9.2",
+        "zod": "^4.3.6"
     },
     "devDependencies": {
-        "@types/jsonwebtoken": "^9.0.6",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/bcryptjs": "^2.4.6",
-        "@types/node": "^24.6.0",
+        "@types/node": "^24.10.9",
+        "@vitest/coverage-v8": "^2.1.9",
         "dotenv": "^17.2.3",
-        "prisma": "^6.16.3",
+        "prisma": "^6.19.2",
         "ts-node-dev": "^2.0.0",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.3",
+        "vitest": "^2.1.9"
     }
 }
