--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -25,5 +25,14 @@
 
     "esModuleInterop": true,
     "resolveJsonModule": true,
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.test.ts",
+    "**/__tests__/**",
+    "**/**/tests/**",
+    "vitest.config.ts"
+  ]
 }
