--- a/web/package.json
+++ b/web/package.json
@@ -6,21 +6,30 @@
         "dev": "next dev -p 5000",
         "build": "next build",
         "start": "next start -p 5000",
-        "lint": "eslint"
+        "lint": "eslint",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage"
     },
     "dependencies": {
         "axios": "^1.12.2",
         "next": "15.5.4",
-        "react": "19.1.0",
-        "react-dom": "19.1.0"
+        "react": "19.2.3",
+        "react-dom": "19.2.3"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "eslint": "^9",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^14.3.1",
+        "@types/node": "^20.19.30",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.5",
+        "@vitejs/plugin-react": "^4.7.0",
+        "@vitest/coverage-v8": "^2.1.9",
+        "eslint": "^9.20.0",
         "eslint-config-next": "15.5.4",
-        "typescript": "^5"
+        "happy-dom": "^20.3.7",
+        "typescript": "^5.9.3",
+        "vitest": "^2.1.9"
     }
 }
