--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,9 @@
         "test": "vitest run",
         "test:watch": "vitest",
         "test:coverage": "vitest run --coverage",
+        "test:unit": "vitest run --exclude src/tests/e2e/**",
+        "test:e2e": "vitest run src/tests/e2e",
+        "test:e2e:watch": "vitest src/tests/e2e",
         "prisma": "prisma",
         "prisma:generate": "prisma generate",
         "prisma:migrate": "prisma migrate dev --name init",
